--- a/sys_monitor/list.ui
+++ b/sys_monitor/list.ui
@@ -49,7 +49,7 @@
        </column>
        <column>
         <property name="text">
-         <string>内存（%）</string>
+         <string>内存</string>
         </property>
        </column>
       </widget>
