--- a/sys_monitor/processwindow.ui
+++ b/sys_monitor/processwindow.ui
@@ -56,22 +56,47 @@
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
-          <widget class="QPushButton" name="pushButton_kill">
+          <widget class="QPushButton" name="pushButton_UndoSpare">
+           <property name="minimumSize">
+            <size>
+             <width>120</width>
+             <height>31</height>
+            </size>
+           </property>
            <property name="text">
-            <string>结束进程</string>
+            <string>UndoSpare</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton_refresh">
+          <widget class="QPushButton" name="pushButton_SpareOneCore">
            <property name="minimumSize">
             <size>
-             <width>137</width>
-             <height>0</height>
+             <width>120</width>
+             <height>31</height>
             </size>
            </property>
            <property name="text">
-            <string>刷新</string>
+            <string>SpareOneCore</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_kill">
+           <property name="minimumSize">
+            <size>
+             <width>150</width>
+             <height>31</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>150</width>
+             <height>31</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>结束进程</string>
            </property>
           </widget>
          </item>
